--- a/index.html
+++ b/index.html
@@ -4,47 +4,60 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Prakhyati Tuitions | Bangalore</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; }
-    header { background: #2563eb; color: #fff; text-align: center; padding: 24px; }
-    header h1 { margin: 0 0 6px; }
-    section { padding: 20px; max-width: 800px; margin: auto; }
-    h2 { color: #2563eb; margin-top: 0; }
-    ul { line-height: 1.7; }
-    .reviews { background: #f8fafc; padding: 15px; border-radius: 8px; margin-bottom: 10px; border: 1px solid #e2e8f0; }
-    .muted { color: #475569; }
-    .map-link { color: #2563eb; text-decoration: none; font-weight: bold; }
-    footer { text-align: center; padding: 12px; background: #f1f5f9; margin-top: 20px; }
-  </style>
+  <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="assets/styles.css">
+  <meta name="description" content="Prakhyati Tuitions — PU Commerce subjects coaching in Bangalore 560056.">
 </head>
 <body>
-  <header>
-    <h1>Prakhyati Tuitions</h1>
-    <p>Bangalore | PU – Commerce Subjects</p>
+  <header class="header">
+    <div class="header-inner">
+      <a class="brand" href="#"><img src="assets/logo.svg" alt="Prakhyati Tuitions logo"></a>
+      <div style="margin-left:auto"><strong>PU — Commerce Coaching</strong></div>
+    </div>
   </header>
 
-  <section>
-    <h2>Courses Offered</h2>
-    <ul>
-      <li>PU – Commerce (e.g., Accountancy, Business Studies, Economics, Statistics)</li>
-    </ul>
-    <p class="muted">* Update the list above to match your exact subjects and batch timings.</p>
+  <section class="hero">
+    <div class="container">
+      <h1>Prakhyati Tuitions</h1>
+      <p>Bangalore • 560056</p>
+      <p class="muted">Focused coaching for PU Commerce students with concept clarity, weekly tests, and doubt-solving.</p>
+    </div>
   </section>
 
-  <section>
-    <h2>Student Reviews</h2>
-    <p class="muted">Reviews will be listed here. To add one, edit this section and paste the text like:</p>
-    <div class="reviews"><strong>Student/Parent Name:</strong> "Your review text here."</div>
-  </section>
+  <main class="container">
+    <section>
+      <h2>Courses Offered</h2>
+      <ul>
+        <li>Accountancy</li>
+        <li>Business Studies</li>
+        <li>Economics</li>
+        <li>Statistics</li>
+      </ul>
+    </section>
 
-  <section>
-    <h2>Location</h2>
-    <p>Bangalore – 560056</p>
-    <p><a class="map-link" href="https://maps.google.com/?q=Bangalore+560056" target="_blank">View on Google Maps</a></p>
-  </section>
+    <section>
+      <h2>Student Reviews</h2>
+      <div class="reviews">
+        <div class="review"><strong>Parent of A.</strong> — "Significant improvement in Accounts within two months."</div>
+        <div class="review"><strong>K. Sharma (PU-II)</strong> — "Clear explanations and practice papers helped a lot."</div>
+      </div>
+    </section>
 
-  <footer>
-    <p>© 2026 Prakhyati Tuitions</p>
-  </footer>
+    <section>
+      <h2>Location & Contact</h2>
+      <div class="contact">
+        <div><strong>Area:</strong> Bangalore — 560056</div>
+        <div><strong>Phone:</strong> <a href="tel:+919945508210">+91 99455 08210</a> • <a href="https://wa.me/919945508210" target="_blank">WhatsApp</a></div>
+        <div><strong>Email:</strong> <a href="mailto:prakhyatituitions@gmail.com">prakhyatituitions@gmail.com</a></div>
+      </div>
+      <div class="map">
+        <iframe title="Google Map" src="https://www.google.com/maps/kZu8ByJeg6wWUrNR6" width="100%" height="320" style="border:0" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">© 2026 Prakhyati Tuitions</footer>
+
+  <a class="whatsapp-fab" href="https://wa.me/919945508210" target="_blank">WhatsApp us</a>
 </body>
 </html>
