--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h2>Student Reviews</h2>
       <div class="reviews">
         <div class="review"><strong>Parent of A.</strong> — "Significant improvement in Accounts within two months."</div>
-        <div class="review"><strong>K. Sharma (PU-II)</strong> — "Clear explanations and practice papers helped a lot."</div>
+        <div class="review"><strong>Tejaswini Pradeep (PU-II)</strong> — "Clear explanations and practice papers helped a lot."</div>
       </div>
     </section>
 
